tests/NormalTests/paczka1/small_fuzzy/35175298.err
Error in line 3: Bo3s A714 43,0
Error in line 13: 1tatkylZ A243 25,0
